client/local/logs/project.log
2018-02-02T01:03:53.468Z - normal: Load ~/.CocosCreator/settings.json
2018-02-02T01:03:53.472Z - normal: checking language setting...
2018-02-02T01:03:53.472Z - normal: Language: zh
2018-02-02T01:03:54.326Z - success: protocol editor-framework registered
2018-02-02T01:03:54.326Z - success: protocol app registered
2018-02-02T01:03:54.326Z - success: protocol theme registered
2018-02-02T01:03:54.326Z - success: protocol packages registered
2018-02-02T01:03:54.326Z - success: protocol unpack registerred
2018-02-02T01:03:54.326Z - success: protocol disable-commonjs registerred
2018-02-02T01:03:54.637Z - normal: connected!
2018-02-02T01:03:54.638Z - normal: Check project /Users/song/Documents/Chat/client
2018-02-02T01:03:54.640Z - normal: Initializing Cocos2d
2018-02-02T01:03:54.874Z - normal: Initializing Asset Database
2018-02-02T01:03:54.906Z - success: protocol uuid registerred
2018-02-02T01:03:54.906Z - success: protocol db registerred
2018-02-02T01:03:54.906Z - success: protocol thumbnail registerred
2018-02-02T01:03:54.907Z - normal: Loading editor/builtin packages
2018-02-02T01:03:54.935Z - success: anysdk loaded
2018-02-02T01:03:55.066Z - success: assets loaded
2018-02-02T01:03:55.070Z - success: builder loaded
2018-02-02T01:03:55.073Z - success: cocos-analytics loaded
2018-02-02T01:03:55.078Z - success: console loaded
2018-02-02T01:03:55.083Z - success: hierarchy loaded
2018-02-02T01:03:55.089Z - success: inspector loaded
2018-02-02T01:03:55.091Z - success: keystore loaded
2018-02-02T01:03:55.095Z - success: node-library loaded
2018-02-02T01:03:55.105Z - success: package-asset loaded
2018-02-02T01:03:55.113Z - success: preferences loaded
2018-02-02T01:03:55.117Z - success: project-exporter loaded
2018-02-02T01:03:55.135Z - success: project-importer loaded
2018-02-02T01:03:55.138Z - success: project-settings loaded
2018-02-02T01:03:55.141Z - success: ui-kit loaded
2018-02-02T01:03:55.146Z - success: ui-grid loaded
2018-02-02T01:03:55.151Z - success: scene loaded
2018-02-02T01:03:55.153Z - success: sprite-editor loaded
2018-02-02T01:03:55.158Z - success: store loaded
2018-02-02T01:03:55.165Z - success: timeline loaded
2018-02-02T01:03:55.165Z - normal: Loading builtin packages
2018-02-02T01:03:55.169Z - success: asset-db-debugger loaded
2018-02-02T01:03:55.170Z - success: color-picker loaded
2018-02-02T01:03:55.174Z - success: package-manager loaded
2018-02-02T01:03:55.180Z - success: sdkbox loaded
2018-02-02T01:03:55.185Z - success: tester loaded
2018-02-02T01:03:55.190Z - success: ui-kit-preview-extra loaded
2018-02-02T01:03:55.193Z - success: ui-kit-preview loaded
2018-02-02T01:03:55.196Z - success: ui-tree loaded
2018-02-02T01:03:56.330Z - normal: Initializing project /Users/song/Documents/Chat/client
2018-02-02T01:03:56.333Z - normal: Loading packages
2018-02-02T01:03:56.337Z - normal: Watching packages
2018-02-02T01:03:56.348Z - normal: Run Application
2018-02-02T01:03:56.868Z - success: preview server running at http://localhost:7456
2018-02-02T01:04:01.481Z - normal: 1.8.0
2018-02-02T03:57:50.788Z - warn: The Asset used in scene "load.fire" is missing. Detailed information:
Asset url: "db://assets/Scene/load.fire"
Missing uuid: "f1faec6a-63de-4c4e-8c57-88c3e64bc75b"

2018-02-02T03:57:50.790Z - warn: The Asset used in scene "load.fire" is missing. Detailed information:
Asset url: "db://assets/Scene/load.fire"
Missing uuid: "f1faec6a-63de-4c4e-8c57-88c3e64bc75b"

2018-02-02T08:07:30.780Z - info: æ’ä»¶è„šæœ¬åœ¨ç¼–è¾‘å™¨ä¸­åŠ è½½æ—¶ï¼Œåœ¨æœ€å¤–å±‚ç”¨ var å£°æ˜Žçš„å˜é‡å°†ä¸å†åšä¸ºå…¨å±€å˜é‡ã€‚å¦‚æœ‰éœ€è¦ï¼Œè¯·æ”¹ç”¨ "window.xx = yy;" æ¥å®šä¹‰å…¨å±€å˜é‡ï¼Œå¦åˆ™ç¼–è¾‘å™¨ä¸‹å¯èƒ½ä¼šæŠ¥é”™ã€‚ ðŸ˜‚
æ’ä»¶è„šæœ¬ï¼š"/Users/song/Documents/Chat/client/assets/Script/pomelo-client/pomeloclient.js"
æ‰€åœ¨è¡Œï¼š"var bt2Str = function(byteArray,start,end) {"
2018-02-02T08:43:00.640Z - failed: [db-task][sync-changes] Failed to import asset /Users/song/Documents/Chat/client/assets/Script/Chat.js, message: Compile error: SyntaxError: /Users/song/Documents/Chat/client/assets/Script/Chat.js: Unexpected token (210:8)
  208 |             msg = this.enterText.string;
  209 |         if(target=='All')
> 210 |         let self = this;
      |         ^
  211 |         pomelo.request(route, {
  212 |             rid: self.roomLab.string,
  213 |             content: msg,
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1858:30)
    at Parser.pp$1.parseIfStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2059:26)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1846:19)
    at Parser.pp$1.parseBlockBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2268:21)
    at Parser.pp$1.parseBlock (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4235:22)
    at Parser.pp$1.parseFunction (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2386:8)
    at Parser.pp$3.parseFunctionExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3760:17)
2018-02-02T08:43:05.989Z - failed: [db-task][sync-changes] Failed to import asset /Users/song/Documents/Chat/client/assets/Script/Chat.js, message: Compile error: SyntaxError: /Users/song/Documents/Chat/client/assets/Script/Chat.js: Unexpected token (210:8)
  208 |             msg = this.enterText.string;
  209 |         if(target=='All')
> 210 |         let self = this;
      |         ^
  211 |         pomelo.request(route, {
  212 |             rid: self.roomLab.string,
  213 |             content: msg,
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1858:30)
    at Parser.pp$1.parseIfStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2059:26)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1846:19)
    at Parser.pp$1.parseBlockBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2268:21)
    at Parser.pp$1.parseBlock (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4235:22)
    at Parser.pp$1.parseFunction (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2386:8)
    at Parser.pp$3.parseFunctionExpression (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3760:17)
